--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ccorcos/test-clock",
-	"version": "0.0.2",
-	"description": "A clock for testing async code without actually having to sleep.",
+	"version": "0.0.1",
+	"description": "A clock for testing async code without actually having to wait.",
 	"repository": {
 		"url": "https://github.com/ccorcos/test-clock"
 	},
